# OpsButler-LLM

./: .gitignore  .mcp.json  CLAUDE.md  README.md  config.yaml  mapping_rules.md  pyproject.toml  requirements.txt
SKILL/: SKILL.md
prompts/: risk_analysis.txt  step_mapping.txt  step_mapping_large_sheet.txt  step_mapping_sheet.txt  summary_generation.txt  summary_sheet.txt  summary_synthesis.txt  system.txt
sample/: 上线checklist.xlsx  测试文档.docx
src/opsbutler/: __main__.py  config.py  excel_parser.py  llm_client.py  main.py  mcp_server.py  models.py  plan_generator.py  word_generator.py
